--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Scratch Notes Browser Tab</title>
   <meta name="description" content="Scratch Notes - Make notes in a browser tab, stored in localStorage.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" href="/favicon.ico" sizes="any">
+  <link rel="icon" href="favicon.ico" sizes="any">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/notes.css">
   <link rel="author" href="https://github.com/jeffchasin">
